# swing-lab

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  PLANNING.md  PROJECT.md  TASKS.md  pyproject.toml
.claude/: CLAUDE.md
data/: universe.csv
docs/superpowers/plans/: 2026-06-15-robinhood-broker-foundation.md  2026-06-16-execution-paper-core.md  2026-06-16-sync-only-trade-log.md  2026-06-17-execution-price-levels.md  2026-06-24-forward-projected-exit-targets.md  2026-06-26-execution-spy-benchmark.md
results/: latest_gate.txt  latest_meta.txt  latest_scan.txt
scripts/: nightly_run.ps1  phase1_factor_exposure.py  phase2_define_edge.py  premarket_run.ps1
src/swing_lab/: analyst.py  backtest.py  broker.py  cli.py  config.py  db.py  fundamentals.py  macro_gate.py  postmortem.py  rec_match.py  recommendation.py  reconcile.py  reconstruction.py  review.py  scanner.py  sync.py  technicals.py  tradelog.py  universe.py
tests/: conftest.py  live_chart_test.py  test_benchmark.py  test_broker.py  test_cli_no_manual_log.py  test_config_credentials.py  test_db_orders_schema.py  test_db_positions.py  test_db_trades_broker.py  test_execution_config.py  test_execution_orders.py  test_execution_quotes.py  test_executor.py  test_guardrails.py  test_levels_prompt.py  test_paper_account.py  test_postmortem_scope.py  test_proposals.py  test_rec_field_coercion.py  test_rec_load.py  test_rec_match.py  test_recommendation_picks.py  test_reconcile.py  test_reconstruction.py  test_schema.py  test_smoke.py  test_sync.py  test_target_validation.py  test_tradelog_mode.py
(+27 files in other folders)
