[project]
name = "swing-lab"
version = "0.1.0"
description = "Short-term momentum swing trading research tool"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.50",
    "pandas>=2.2",
    "numpy>=2.0",
    "anthropic>=0.40",
    "matplotlib>=3.9",
    "tabulate>=0.9",
    "lxml>=5.0",
    "streamlit>=1.40",
    "plotly>=5.20",
    "python-dotenv>=1.0",
    "tzdata>=2024.1",  # IANA tz database for zoneinfo on Windows
    "robin_stocks>=3.0",
    "keyring>=24.0",
    "pyotp>=2.9",
]

[project.scripts]
swing-lab = "swing_lab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swing_lab"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
